# fvcs

./: .gitignore  README.md  itest.sh  pyproject.toml  setup.cfg
fvcs/: diff.py  distributed.py  fs.py  main.py  repo.py  repository.py
tests/: test_integration.py
